# cnr_scene_manager

./: .gitignore  README.md
cnr_scene_manager/: CMakeLists.txt  CMakeLists.txt.user.8cb050f  package.xml
cnr_scene_manager/config/: logger_param.yaml  scene.yaml  test_move.yaml
cnr_scene_manager/launch/: cnr_scene_manager.launch  cnr_scene_manager.yaml.launch  test_move.launch  test_move.yaml.launch  test_path.launch.yaml
cnr_scene_manager/script/: load_params.sh
cnr_scene_manager/src/: cnr_scene_manager_node.cpp  test.cpp  test_move.cpp
cnr_scene_manager_msgs/: CMakeLists.txt  CMakeLists.txt.user.8cb050f  package.xml
cnr_scene_manager_msgs/msg/: Object.msg
cnr_scene_manager_msgs/srv/: AddObjects.srv  MoveObjects.srv  RemoveObjects.srv
