<?xml version="1.0"?>
<package format="2">
  <name>cnr_scene_manager</name>
  <version>0.0.0</version>
  <description>The cnr_scene_manager package</description>

  <maintainer email="riemann@todo.todo">riemann</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>cnr_tf_named_object_loader</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_export_depend>cnr_tf_named_object_loader</build_export_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <exec_depend>cnr_tf_named_object_loader</exec_depend>
  <exec_depend>rclcpp</exec_depend>

  <depend>cnr_param</depend>
  <depend>cnr_logger</depend>
  <depend>tf_conversions</depend>
  <depend>eigen_conversions</depend>
  <depend>cnr_scene_manager_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>

  </export>
</package>
